--- a/myrun/static/css/myrun.css
+++ b/myrun/static/css/myrun.css
@@ -270,14 +270,6 @@ ul {
     color: #4BFB6C;
     transition: all 0.3s ease-in-out;
 }
-@media only screen and (max-width: 500px) {
-    .nav__label {
-        font-size: 14px;
-    }
-    article.section__wrapper {
-        padding: 0 1rem;
-    }
-}
 .page {
     margin: -0.5rem;
     height: 100vh;
@@ -308,6 +300,49 @@ ul {
     transform: translateX(100%);
     transition: all 0.7s cubic-bezier(0.23, 1, 0.32, 1);
 }
+
+.section:nth-child(1) {
+    background: url("../image/home-min.png") no-repeat center center fixed;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    z-index: 1;
+}
+.tbl-content a {
+    text-decoration: none;
+    border-bottom: 2px solid #4BFB6C;
+    color: inherit;
+    transition: background 0.1s cubic-bezier(.33, .66, .66, 1);
+}
+.tbl-content a:hover {
+    background: #4BFB6C;
+}
+.section:nth-child(2) {
+    color: #1a1a1a;
+    background: #F4F2F9;
+    background-image: url("data:image/svg+xml,%3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20xmlns%3Axlink%3D%27http%3A//www.w3.org/1999/xlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20fill%3D%27#4BFB6C%27%20width%3D%27400px%27%20height%3D%27400px%27%20viewBox%3D%270%200%2012%2012%27%20enable-background%3D%27new%200%200%2012%2012%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Cpath%20d%3D%27M12%2C3.535V0H8.465L0%2C8.465V12h3.535L12%2C3.535z%20M0%2C0h3.535L0%2C3.535V0z%20M8.465%2C12L12%2C8.465V12H8.465z%27/%3E%0A%3C/svg%3E");
+}
+.section:nth-child(3) {
+    color: #1a1a1a;
+    background: #F4F2F9;
+    background-image: url("data:image/svg+xml,%3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20xmlns%3Axlink%3D%27http%3A//www.w3.org/1999/xlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20width%3D%27200px%27%20height%3D%27200px%27%20viewBox%3D%270%200%2010%2010%27%20enable-background%3D%27new%200%200%2010%2010%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Crect%20fill%3D%27#4BFB6C%27%20width%3D%2710%27%20height%3D%273%27/%3E%0A%3C/svg%3E");
+}
+.section:nth-child(4) {
+    color: #1a1a1a;
+    background: #F4F2F9;
+    background-image: url("data:image/svg+xml, %3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20xmlns%3Axlink%3D%27http%3A//www.w3.org/1999/xlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20fill%3D%27#4BFB6C%27%20width%3D%27300px%27%20height%3D%27300px%27%20viewBox%3D%270%200%2012%2012%27%20enable-background%3D%27new%200%200%2012%2012%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Cpath%20d%3D%27M12%2C3.535V0H8.465L0%2C8.465V12h3.535L12%2C3.535z%20M0%2C0h3.535L0%2C3.535V0z%20M8.465%2C12L12%2C8.465V12H8.465z%27/%3E%0A%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
+.section:nth-child(5) {
+    color: #1a1a1a;
+    background: #F4F2F9;
+    background-image: url("data:image/svg+xml, %3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20xmlns%3Axlink%3D%27http%3A//www.w3.org/1999/xlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20fill%3D%27#4BFB6C%27%20width%3D%27300px%27%20height%3D%27300px%27%20viewBox%3D%270%200%2012%2012%27%20enable-background%3D%27new%200%200%2012%2012%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Cpath%20d%3D%27M12%2C3.535V0H8.465L0%2C8.465V12h3.535L12%2C3.535z%20M0%2C0h3.535L0%2C3.535V0z%20M8.465%2C12L12%2C8.465V12H8.465z%27/%3E%0A%3C/svg%3E");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+}
 .section--hidden {
     transform: translateX(-100%);
 }
@@ -331,6 +366,7 @@ ul {
     transition: all 0.45s;
     transition-delay: 0.1s;
 }
+
 .section__map {
     min-width: 100%;
     padding: 0 0rem;
@@ -376,58 +412,24 @@ ul {
 .section p:last-child {
     margin-bottom: 0;
 }
-.section:nth-child(1) {
-    background: url("../image/home.png") no-repeat center center fixed;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    z-index: 1;
+@media only screen and (max-width: 500px) {
+    article.section__wrapper {
+        padding: 1rem;
+    }
 }
-.tbl-content a {
-    text-decoration: none;
-    border-bottom: 2px solid #4BFB6C;
-    color: inherit;
-    transition: background 0.1s cubic-bezier(.33, .66, .66, 1);
-}
-.tbl-content a:hover {
-    background: #4BFB6C;
-}
-.section:nth-child(2) {
-    color: #1a1a1a;
-    background: #F4F2F9;
-    background-image: url("data:image/svg+xml,%3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20xmlns%3Axlink%3D%27http%3A//www.w3.org/1999/xlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20fill%3D%27#4BFB6C%27%20width%3D%27400px%27%20height%3D%27400px%27%20viewBox%3D%270%200%2012%2012%27%20enable-background%3D%27new%200%200%2012%2012%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Cpath%20d%3D%27M12%2C3.535V0H8.465L0%2C8.465V12h3.535L12%2C3.535z%20M0%2C0h3.535L0%2C3.535V0z%20M8.465%2C12L12%2C8.465V12H8.465z%27/%3E%0A%3C/svg%3E");
-}
-.section:nth-child(3) {
-    color: #1a1a1a;
-    background: #F4F2F9;
-    background-image: url("data:image/svg+xml,%3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20xmlns%3Axlink%3D%27http%3A//www.w3.org/1999/xlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20width%3D%27200px%27%20height%3D%27200px%27%20viewBox%3D%270%200%2010%2010%27%20enable-background%3D%27new%200%200%2010%2010%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Crect%20fill%3D%27#4BFB6C%27%20width%3D%2710%27%20height%3D%273%27/%3E%0A%3C/svg%3E");
-}
-.section__2 a {
-    text-decoration: none;
-    border-bottom: 2px solid #4BFB6C;
-    box-shadow: inset 0 -4px 0 #4BFB6C;
-    color: inherit;
-    transition: background 0.1s cubic-bezier(.33, .66, .66, 1);
-}
-.section__2 a:hover {
-    background: #4BFB6C;
-}
-.section:nth-child(4) {
-    color: #1a1a1a;
-    background: #F4F2F9;
-    background-image: url("data:image/svg+xml, %3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20xmlns%3Axlink%3D%27http%3A//www.w3.org/1999/xlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20fill%3D%27#4BFB6C%27%20width%3D%27300px%27%20height%3D%27300px%27%20viewBox%3D%270%200%2012%2012%27%20enable-background%3D%27new%200%200%2012%2012%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Cpath%20d%3D%27M12%2C3.535V0H8.465L0%2C8.465V12h3.535L12%2C3.535z%20M0%2C0h3.535L0%2C3.535V0z%20M8.465%2C12L12%2C8.465V12H8.465z%27/%3E%0A%3C/svg%3E");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
-.section:nth-child(5) {
-    color: #1a1a1a;
-    background: #F4F2F9;
-    background-image: url("data:image/svg+xml, %3Csvg%20version%3D%271.1%27%20id%3D%27Layer_1%27%20xmlns%3D%27http%3A//www.w3.org/2000/svg%27%20xmlns%3Axlink%3D%27http%3A//www.w3.org/1999/xlink%27%20x%3D%270px%27%20y%3D%270px%27%0A%20%20%20%20%20fill%3D%27#4BFB6C%27%20width%3D%27300px%27%20height%3D%27300px%27%20viewBox%3D%270%200%2012%2012%27%20enable-background%3D%27new%200%200%2012%2012%27%20xml%3Aspace%3D%27preserve%27%3E%0A%3Cpath%20d%3D%27M12%2C3.535V0H8.465L0%2C8.465V12h3.535L12%2C3.535z%20M0%2C0h3.535L0%2C3.535V0z%20M8.465%2C12L12%2C8.465V12H8.465z%27/%3E%0A%3C/svg%3E");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-}
+
+/*
+@media only screen and (max-width: 500px) {
+    h1 {
+        
+    }
+    .nav__label {
+        font-size: 14px;
+    }
+    article.section__wrapper {
+        padding: 0 1rem;
+    }
+}*/
 /* about */
 
 .accordion {
